# cocoAI

./: .gitignore  432570067_request_siren.yaml  511233942_request_siren.yaml  51233902_request_siren.yaml  815315064_request_siren.yaml  905039152_request_siren.yaml  911842102_request_siren.yaml  911882102_request_siren.yaml  925318156_request_siren.yaml  README.html  README.md  chemins_classes.txt  fichier_concatene.txt  install.bash  install.ps1  main.py  migration.md  presentation_beamer.tex  pyproject.toml  requirements.txt  test.ipynb  toto  toto.py  tutu.csv  unclassified_path.txt
cocoAI/: FEC.py  SIG.py  attio.py  bail.py  bilan.py  bilan_simplifie.py  company.py  compte_de_resultats.py  create_yaml_folder_tree.py  doc_sort.py  etablissement.py  extract_KBIS.py  folder_tree.py  liasse_fiscale.py  masse_salariale.py  new_FEC.ipynb  produce_nom_dossier.ipynb  salaire.ipynb  salaire.md  salaire.py  salaire_new.ipynb  terrasse.py  test.ipynb  test3.ipynb  toto.py
common/: 2. BASE ORGA & AFFAIRES - TRANSACTION.xlsx  AI_API.py  FEC.py  REST_API.py  bdd_SIRET.xlsx  convert.py  databank.yaml  execute.py  extract.py  extract_KBIS.py  folder_possibles_completv2.csv  folder_structure.yaml  folder_tree.py  identifiers.py  image.py  legendes.py  logconfig.py  nomenclature.yaml  path.py  pdf_document.py  request_siren.yaml  test.ipynb  test2.ipynb  toto.md  toto.py
use_cases/: interrogation_sirene.ipynb  salaire_old.ipynb  toto.yaml  transfer_siren.ipynb
user_template/: main.py  main_FEC.py  main_archive_library.py  main_archive_siret.py  main_attio.py  main_bail.py  main_bilan.py  main_company.py  main_compte_de_resultats.py  main_concat_attio_companies.py  main_concat_attio_corporation.py  main_doc_sort.py  main_etablissement.py  main_folder_tree.py  main_global.py  main_liasse_fiscale.py  main_liasse_fiscalev2.ipynb  main_produce_attio.py  main_salaires.py  main_script_chapeau.py  main_terrasses.py  test.py  testv3.py  toto.csv  toto.py
work/: Bilan_detaillev2.xlsx  SIG_data.ipynb  automate_pythonOCR.py  beamer_slides.py  complete_bdd.py  concatene_fichier_txt.py  concatene_unclassified_path.py  detect_monochrome_images.py  exploration.ipynb  extract_info_mistral_AI_with_image.py  extract_info_mistral_AI_with_image_refined.py  extract_table.py  extract_table_Mistral_AI.py  extract_table_PIL.py  extract_table_camelot.py  extract_table_pymupdf.py  extract_table_tesseract.py  fill_correspondance_folde.ipynb  generate_correspondance_enseigne.ipynb  get_folder_url.py  huggingface.py  huggingface_remote.py  load_all_sirets_in_databank.py  main_FEC.ipynb  main_test.ipynb  merge_bdd_siret.ipynb  pandas_multiple.xlsx  pappers_api_ref.py  prompt_direct.txt  remplissage_csv.ipynb  requete_data.py  slides.md  slides.tex  sort_yaml_files.py  squash_commits.py  test.ipynb  test.py  test.tex  test_cartographie.ipynb  (+5 more)
(+6 files in other folders)
