[project]
name = "cocoai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "asttokens==3.0.0",
    "black==25.1.0",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "chardet==5.2.0",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "colorama==0.4.6",
    "com2ann==0.3.0",
    "comm==0.2.2",
    "cryptography==44.0.0",
    "debugpy==1.8.12",
    "decorator==5.1.1",
    "distro==1.9.0",
    "et-xmlfile==2.0.0",
    "eval-type-backport==0.2.2",
    "executing==2.2.0",
    "filelock==3.17.0",
    "fsspec==2024.12.0",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "huggingface-hub==0.28.1",
    "idna==3.10",
    "iniconfig==2.0.0",
    "ipykernel==6.29.5",
    "jedi==0.19.2",
    "jinja2==3.1.5",
    "jpype1==1.5.2",
    "jsonpath-python==1.0.6",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "libcst==1.6.0",
    "lxml==5.3.0",
    "markdown==3.7",
    "markupsafe==3.0.2",
    "matplotlib-inline==0.1.7",
    "mermaid-py==0.7.0",
    "mistralai==1.6.0",
    "mpmath==1.3.0",
    "mypy-extensions==1.0.0",
    "nest-asyncio==1.6.0",
    "numpy>=2.2.3",
    "opencv-python==4.11.0.86",
    "openpyxl==3.1.5",
    "ordered-set==4.1.0",
    "packaging==24.2",
    "pandas==2.2.3",
    "parso==0.8.4",
    "pathspec==0.12.1",
    "pdf2image==1.17.0",
    "pdfminer-six==20231228",
    "pdfplumber==0.11.5",
    "pickleshare==0.7.5",
    "pillow==11.1.0",
    "platformdirs==4.3.6",
    "pluggy==1.5.0",
    "prompt-toolkit==3.0.50",
    "psutil==6.1.1",
    "pure-eval==0.2.3",
    "pycparser==2.22",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pygments==2.19.1",
    "pylatex==1.4.2",
    "pymupdf==1.25.2",
    "pypandoc==1.15",
    "pypdf2==3.0.1",
    "pypdfium2==4.30.1",
    "pyperclip>=1.9.0",
    "pytesseract==0.3.13",
    "pytest==8.3.4",
    "python-dateutil==2.9.0.post0",
    "python-pptx==1.0.2",
    "pytz==2025.1",
    "pyupgrade==3.19.1",
    "pyyaml==6.0.2",
    "pyzmq==26.2.1",
    "regex==2024.11.6",
    "reportlab==4.3.0",
    "requests==2.32.3",
    "ruff==0.9.5",
    "safetensors==0.5.2",
    "setuptools==75.8.0",
    "shed==2024.10.1",
    "six==1.17.0",
    "sniffio==1.3.1",
    "stack-data==0.6.3",
    "sympy==1.13.1",
    "tabula-py==2.10.0",
    "tesseract==0.1.3",
    "tokenize-rt==6.1.0",
    "tokenizers==0.21.0",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "tornado==6.4.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "transformers==4.48.2",
    "typing-extensions==4.12.2",
    "typing-inspect==0.9.0",
    "tzdata==2025.1",
    "urllib3==2.3.0",
    "wcwidth==0.2.13",
    "xlsxwriter==3.2.2",
]
